--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,9 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "nodemailer": "^8.0.0",
+    "qrcode": "^1.5.4",
+    "uuid": "^13.0.0",
     "validator": "^13.15.26"
   }
 }
