--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
     "nodemailer": "^8.0.0",
     "qrcode": "^1.5.4",
     "uuid": "^13.0.0",
