--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^8.0.0",
     "qrcode": "^1.5.4",
+    "socket.io": "^4.8.3",
     "uuid": "^13.0.0",
     "validator": "^13.15.26"
   }
